--- a/frontend/static/css/index.css
+++ b/frontend/static/css/index.css
@@ -115,13 +115,6 @@ nav {
   opacity: 0.5;
 }
 
-#app {
-}
-
-a {
-  color: #009579;
-}
-
 .rutor {
   position: relative;
   display: flex;
@@ -745,4 +738,135 @@ table.car-table tr:first-child th {
 .updateBtn:active,
 .removeBtn:active {
   color: #1a1a1a;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  border-radius: 1rem;
+}
+
+/* Modal Content */
+.modal-content {
+  position: relative;
+  background-color: #c0c0c0;
+  margin: auto;
+  padding: 0;
+  border: 1px solid #888;
+  width: 50%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  -webkit-animation-name: animatetop;
+  -webkit-animation-duration: 0.4s;
+  animation-name: animatetop;
+  animation-duration: 0.4s;
+  top: 10rem;
+  border-radius: 1rem;
+}
+
+/* Add Animation */
+@-webkit-keyframes animatetop {
+  from {
+    top: -300px;
+    opacity: 0;
+  }
+  to {
+    top: 10rem;
+    opacity: 1;
+  }
+}
+
+@keyframes animatetop {
+  from {
+    top: -300px;
+    opacity: 0;
+  }
+  to {
+    top: 10rem;
+    opacity: 1;
+  }
+}
+
+.modal-header-h2 {
+  padding-top: 0.5rem;
+  font-size: 3rem;
+}
+
+/* The Close Button */
+.close {
+  color: white;
+  float: right;
+  font-size: 48px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal-header {
+  padding: 2px 16px;
+  border-radius: 1rem 1rem 0 0;
+  height: 4rem;
+  background-color: #8b2d86;
+  color: white;
+}
+
+.modal-body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 2px 16px;
+}
+
+.modal-footer {
+  padding: 2px 16px;
+  background-color: #5cb85c;
+  color: white;
+}
+.modalRemoveBtn,
+.modalCloseBtn {
+  position: relative;
+  margin-left: 0.5rem;
+  border: none;
+  background: #999999;
+  background: linear-gradient(#8f8f8f, #4d4d4d);
+  border-radius: 8px;
+  padding: 10px 19px;
+  color: #ffffff;
+  display: inline-block;
+  font: normal bold 30px/1 "Roboto", sans-serif;
+  text-align: center;
+}
+
+.modalRemoveBtn:focus,
+.modalCloseBtn:focus {
+  outline: none;
+}
+
+.modalRemoveBtn:hover,
+.modalCloseBtn:hover {
+  background: #585858;
+}
+
+.modalRemoveBtn:active,
+.modalCloseBtn:active {
+  color: #1a1a1a;
+}
+
+.modalBtns {
+  margin-top: 1rem;
 }
